first already test success

--- a/first/wordpress/Dockerfile
+++ b/first/wordpress/Dockerfile
@@ -1,5 +1,7 @@
-from csphere/php-fpm:5.4
+from fyyc1204/php-fpm:5.4
 
 add init.sh /init.sh
 
-entrypoint ["/init.sh", "/usr/bin/supervisord", "-n", "-c", "/etc/supervisord.conf"]
+run chmod +x /init.sh
+
+entrypoint ["/init.sh","/usr/bin/supervisord", "-n", "-c", "/etc/supervisord.conf"]
