--- a/first/mysql/Dockerfile
+++ b/first/mysql/Dockerfile
@@ -4,7 +4,7 @@
 #
 # Dockerizing Mariadb: Dockerfile for building Mariadb images
 #
-FROM csphere/centos:7.1
+FROM fyyc1204/centos:7.1
 MAINTAINER Carson,C.J.Zeong <zcy@nicescale.com>
 
 ENV DATA_DIR /var/lib/mysql
@@ -17,6 +17,7 @@ ADD mysqld_charset.cnf /etc/my.cnf.d/
 
 COPY scripts /scripts
 RUN chmod +x /scripts/start
+RUN chmod +x /scripts/firstrun_maria
 
 EXPOSE 3306
 
